fixing overflow cliping problems

--- a/style/mobile.app.scss
+++ b/style/mobile.app.scss
@@ -161,7 +161,6 @@ h1,h2,h3,h4,h5,h6 {
 
 .content-view {
     -webkit-transform: translateZ(0px);
-    overflow: hidden;
     background: url(../img/color_bg.png);
 }
 
